# autopiloot-agents

./: .env.sample  .firebaserc  .gitignore  AGENCY_SWARM_1.0.2_COMPATIBILITY_REPORT.md  AGENTS.md  CLAUDE.md  FIREBASE_SETUP_MANUAL.md  README.md  SETUP.md  __init__.py  firebase.json  firestore.rules  storage.rules  supply-chain-security-report.md  test_environment.py  test_scraper_agent.py
autopiloot/: .env.template  .gitignore  ADR.mdc  AGENTS_OVERVIEW.md  AUDIT_LOGGING_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  ENVIRONMENT.md  FIREBASE_IMPLEMENTATION.md  IDEMPOTENCY_IMPLEMENTATION.md  QUICK_OVERVIEW.md  README.md  SHEETS_IMPLEMENTATION.md  TASKS.md  TESTING.md  __init__.py  agency.py  agency_manifesto.md  claude.md  env.template  firebase.json  firestore.indexes.json  firestore.rules  prd.mdc  pyproject.toml  pytest.ini  requirements.txt  supply_chain_audit.json  test_compute_linkedin_stats_comprehensive.py  test_coverage_boost.py  test_get_post_comments_100_percent.py  test_get_post_comments_final_100.py  test_get_post_comments_final_coverage.py  test_get_post_comments_targeted_coverage.py  test_get_post_comments_working_100.py  test_output_full.txt  test_save_ingestion_runner.py  test_upsert_to_zep_group_comprehensive.py
autopiloot/ScraperAgent/: ScraperAgent.py  __init__.py  instructions.md
autopiloot/assistant_agent/: __init__.py  assistant_agent.py  instructions.md
autopiloot/config/: FIREBASE_STORAGE_SETUP.md  __init__.py  env_loader.py  firebase-storage-lifecycle.json  loader.py  settings.yaml  test_config.py
autopiloot/core/: __init__.py  agent_registry.py  agent_schedules.py  audit_logger.py  base_tool.py  drive.py  env_loader.py  firestore_client.py  guardrails.py  idempotency.py  json_response.py  rate_limiter.py  reliability.py  sheets.py  slack_utils.py  thread_cleanup.py  time_utils.py  zep.py
autopiloot/coverage/: __init___py.html  agency_py.html
autopiloot/docs/: AGENTS_OVERVIEW.md  ENVIRONMENT.md  FIREBASE_IMPLEMENTATION.md  MODULE_EXECUTION.md  QUICK_OVERVIEW.md  RAG_ORCHESTRATION_INTEGRATION.md  RELIABILITY_IMPLEMENTATION.md  TASKS.md  TASK_0097_IMPLEMENTATION_SUMMARY.md  TESTING.md  contracts.md  firestore_schema_rag.md  modular-architecture.md  rag_testing_strategy.md  test-interference-solution.md  test-quick-reference.md  testing_save_video_metadata.md
autopiloot/documentation/: AUDIT_LOGGING_IMPLEMENTATION.md  ENVIRONMENT.md  TESTING.md
autopiloot/drive_agent/: __init__.py  drive_agent.py  instructions.md
autopiloot/firestore/: indexes.md
autopiloot/linkedin_agent/: __init__.py  instructions.md  linkedin_agent.py
autopiloot/observability_agent/: __init__.py  instructions.md  observability_agent.py
autopiloot/orchestrator_agent/: __init__.py  instructions.md  orchestrator_agent.py
autopiloot/planning/: __init__.py  prd.mdc  tasks.md
autopiloot/scraper/: __init__.py
autopiloot/scraper_agent/: __init__.py  instructions.md  scraper_agent.py
autopiloot/scripts/: batch_firestore_refactor.py  check_tool_filenames_snake_case.sh  comprehensive_test_fix.py  detect_env_config_patterns.py  fix_all_test_syntax.py  fix_datetime_deprecation.py  fix_drive_tests.py  fix_observability_tests.py  fix_remaining_drive_tests.py  fix_remaining_import_errors.py  new_agent.py  remove_syspath_patterns.py  replace_firestore_init.py  run_rag_tests_with_coverage.sh  simplify_all_failing_tests.py  simplify_subdirectory_tests.py
autopiloot/strategy_agent/: __init__.py  instructions.md  strategy_agent.py
autopiloot/summarizer_agent/: __init__.py  instructions.md  summarizer_agent.py
autopiloot/tasks/: 00-config-yaml.mdc  00-env-config.mdc  01-scheduling-firebase.mdc  02-idempotency-naming.mdc  03-google-sheet-flow.mdc  05-agent-tools.mdc  10-scraper-resolve-channel.mdc  (+11 more)
back/: main.py  (+7 more)
(+786 files in other folders)
